# docRAG

./: .gitignore  CLAUDE.md  TODO.md  index.html  package-lock.json  package.json
docs/: AUTH_PLAN.md  OLLAMA_PLAN.md  SCALE_PLAN.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: filesystem.rs  mod.rs  ollama.rs  persistence.rs
src/components/auth/: AuthForm.tsx  AuthScreen.tsx
src/components/chat/: ChatInput.tsx  ChatView.tsx  MentionDropdown.tsx  MessageBubble.tsx  SourceChips.tsx
src/components/documents/: DocumentList.tsx  DocumentsView.tsx  FolderPicker.tsx  IndexingProgress.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/settings/: ApiKeyInput.tsx  ModelSelector.tsx  SettingsView.tsx
src/components/setup/: OllamaSetup.tsx
src/hooks/: useAuth.ts  useChat.ts  useConversations.ts  useIndex.ts  useSettings.ts
src/lib/: constants.ts  cosine.ts  docIcon.tsx  mentionParser.ts  pdfExport.ts  pptxParser.ts
src/services/: chunker.ts  documentParser.ts  indexManager.ts  openaiClient.ts  pageCounter.ts  promptLimit.ts  supabase.ts  tauriCommands.ts  vectorStore.ts
src/store/: appStore.ts
src/types/: auth.ts  chat.ts  conversation.ts  documents.ts  settings.ts  vectorStore.ts
