[package]
name = "doc-rag"
version = "0.1.0"
description = "Local Document Chat Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "doc_rag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["fs"] }
